fix spacing around headers

--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+<style>
 :root {
   --kbccblue: #003466;
   --kbccorange: #ff4e00;
@@ -20,6 +21,9 @@ a:hover {
 }
 
 /* style header */
+#library-logo-div {
+  text-align: center;
+}
 #top-row {
   margin-top: 30px;
 }
@@ -253,6 +257,9 @@ a:hover {
     max-width: 100%;
     max-height: 350px;
   }
+  #kbcc-background-image {
+    margin-top: -15px;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -260,3 +267,4 @@ a:hover {
     margin-top: -3px;
   }
 }
+</style>
